Added tech and language stack + some styling stuff

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,1 +1,31 @@
 $nav-button-color: #00838F;
+
+$ma-blue: #029AE1;
+$mis-blue: #0028A0;
+$moody-blue: #003468;
+
+$c-color: #555555;
+$cpp-color: #f34b7d;
+$csharp-color: #178600;
+$css-color: #563d7c;
+$html-color: #e34c26;
+$java-color: #b07219;
+$js-color: #f1e05a;
+$python-color: #3572A5;
+$scala-color: #c22d40;
+$r-color: #198CE7;
+$ts-color: #2b7489;
+
+$sql-color: black;
+$mongo-color: gray;
+
+/*
+node.js
+react - redux
+angular
+hapi.js
+aws
+solr
+spark
+play
+*/
